--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -65,3 +65,12 @@ services:
 
 volumes:
   data:
+  frontend:
+
+endpoints:
+  - path: /
+    service: frontend
+    port: 80
+  - path: /api
+    service: api
+    port: 8080
